Kubernetes/Run-Kubernetes-Locally/comingsoon/k8s/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: comingsoon-page-img-deployment 
  namespace: comingsoon
spec:
  selector:
    matchLabels:
      app: comingsoon-page
  replicas: 2
  template:
    metadata:
      labels:
        app: comingsoon-page
    spec:
      containers:
      - name: comingsoon-page
        image: triple3a/comingsoon-page:latest
        ports:
        - containerPort: 80
