Kubernetes/Run-Kubernetes-Locally/comingsoon/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: comingsoon-page
  namespace: kube-system
spec:
  selector:
    app: comingsoon-page
# ClusterIP (default), LoadBalancer (works on cloud), NodePort (most used)
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80
